adding how to play instructions

--- a/index.html
+++ b/index.html
@@ -27,6 +27,33 @@
         <div id="xCount">X - 0</div>
         <div id="oCount">O - 0</div>
       </div>
+      <div id="playCounter">No of Plays: <span id="playCount"></span></div>
+      <div id="pageVisitCount"></div>
+    </div>
+    <div id="howInfo">Trouble playing, here is <span>How to play</span></div>
+    <div id="howToPlay" class="hide">
+      <h3>Tic-Tac-Toe Brain Game</h3>
+      <hr />
+      <h4>How to play</h4>
+      <hr />
+      <button id="closeInfo">X</button>
+      <ul>
+        <li>
+          The game is played on a grid that's 3 squares by 3 squares.<br /><br />
+        </li>
+        <li>
+          You are X, your friend (or the computer in this case) is O. Players
+          take turns putting their marks in empty squares.<br /><br />
+        </li>
+        <li>
+          The first player to get 3 of her marks in a row (up, down, across, or
+          diagonally) is the winner.<br /><br />
+        </li>
+        <li>
+          When all 9 squares are full, the game is over. If no player has 3
+          marks in a row, the game ends in a tie.<br /><br />
+        </li>
+      </ul>
     </div>
     <script src="index.js"></script>
   </body>
